--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="http://w.pitula.me/presentations" title="link to my presentations">Presentations</a></li>
             </ul>
           </nav>
 
