--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,8 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-              <li class="navigation__item"><a href="http://w.pitula.me/presentations" title="link to my presentations">Presentations</a></li>
+              <li class="navigation__item"><a href="https://w.pitula.me/presentations" title="link to my presentations">Presentations</a></li>
+              <li class="navigation__item"><a href="https://medium.com/@w.pitula" title="link to my medium profile">Medium</a></li>
             </ul>
           </nav>
 
